correct branch to trigger

--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -3,7 +3,7 @@ name: Build and Publish PDF
 on:
   push:
     branches:
-      - main  # Change this if your default branch is different
+      - master
 
 jobs:
   build:
