--- a/.github/workflows/build-publish.yml
+++ b/.github/workflows/build-publish.yml
@@ -31,6 +31,9 @@ jobs:
 #      - name: Convert README.md to index.html
 #        run: |
 #          pandoc README.md -o index.html
+#
+      - name: Copy pages files
+        run: mkdir -p doc && cp README.md level4.pdf level5.pdf doc/
 
       - name: Configure GitHub Pages
         uses: actions/configure-pages@v3
@@ -38,10 +41,7 @@ jobs:
       - name: Upload artifact for GitHub Pages
         uses: actions/upload-pages-artifact@v3
         with:
-          path: |
-            README.md
-            level4.pdf
-            level5.pdf
+          path: doc
 
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v2
